@@ -272,7 +272,7 @@ define,	   0x585B00,	0x592D50,	0x585860,	"get_int_from_conquests_ini",			"int (_
 repl call, 0x59301E,	0x5A0756,	0x592D3E,	"get_WindowsFileBox_from_ini",			""
 define,	   0x4A0670,	0x4A71F0,	0x4A0700,	"open_load_game_file_picker",			"char const * (__fastcall *) (void * this)"
 repl call, 0x593054,	0x5A078A,	0x592D74,	"do_open_load_game_file_picker",		""
-define,	   0x592D90,	0x5A0490,	0x592AB0,	"do_load_game",					"void * (__cdecl *) (char * param_1)"
+inlead,	   0x592D90,	0x5A0490,	0x592AB0,	"do_load_game",					"void * (__cdecl *) (char * param_1)"
 define,	   0x4F5EF0,	0x4FF290,	0x4F5FB0,	"perform_interturn",				"void (__cdecl *) ()"
 repl call, 0x4F6759,	0x4FFB21,	0x4F6819,	"perform_interturn_in_main_loop",		""
 repl call, 0x4F59E6,	0x4FED88,	0x4F5AA6,	"show_movement_phase_popup",			""
@@ -283,6 +283,7 @@ inlead,	   0x4A3A70,	0x4AA6F0,	0x4A3B00,	"Fighter_do_bombard_tile",			"void (__f
 define,	   0x74AF60,	0x765300,	0x74AF20,	"p_mp_object",					"void *"
 define,	   0x4697B0,	0x46BF90,	0x469830,	"mp_check_current_combat",			"byte (__fastcall *) (void * this, int edx, int mp_tile_x, int mp_tile_y)"
 define,	   0x4A2650,	0x4A9290,	0x4A26E0,	"Fighter_damage_city_by_bombardment",		"byte (__fastcall *) (Fighter * this, int edx, Unit * unit, City * city, int damage_kind, int min_fire_rate)"
+define,	   0x426BD0,	0x428310,	0x426C50,	"Map_in_range",					"byte (__fastcall *) (Map * this, int edx, int x, int y)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
