@@ -40,6 +40,8 @@ show_message_after_dodging_sam = true
 ; resumes the original game.
 replay_ai_moves_in_hotseat_games = false
 
+restore_unit_directions_on_game_load = true
+
 [=======================]
 [=== AI ENHANCEMENTS ===]
 [=======================]
